[fix] align trash icon to center

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -81,3 +81,8 @@ a.waves-effect, a.waves-light {
 body {
     background-color: white;
 }
+
+.icon-trash-center {
+    text-align: center;
+    line-height: 35px;
+}
